--- a/drumline.html
+++ b/drumline.html
@@ -4,22 +4,38 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
     <script type="text/javascript" src="script/index.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 </head>
 
 <body>
-  <div>
+  <nav>
     <ul class="topnav">
-    <li class="topnavli"><a href="index.html">Home</a></li>
-    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-    <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
-    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-    <li class="topnavli"><a class="active" class="item" href="drumline.html">Drumline</a></li>
-    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
-  </ul>
-</div>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Information</a></li>
+      <li><a href="drill.html">Drill</a></li>
+      <li><a href="brass.html">Brass</a></li>
+      <li><a href="woodwinds.html">Woodwinds</a></li>
+      <li><a href="drumline.html" id="selected">Drumline</a></li>
+      <li><a href="guard.html">Guard</a></li>
+      <li><a href="scroll.html">Scroll</a></li>
+    </ul>
+  </nav><br>
+  <center>
+  <img src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Drum%20Line%20Banner.gif"/><br>
+  <p id="message">The first rehearsal for this year's<br><br>Indoor Drumline will be<br><br>Thursday, November 29th<br><br>6:00 pm to 9:00 pm</p><br>
+  <p>Fill out the interest form <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfwJ8zoHGurWeM7QBNjRfb--_zRRDLwgujexLEViBQD4I1GPw/viewform">HERE</a></p>
+  <br><br>
+  <p id="warmups">Please download this year's battery warm ups <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/2018%20NP%20Drumline%20Warm%20Up%20Exercises.pdf">HERE</a></p><br>
+
+  <p id="percstaff"><u>NPHS Percussion Staff</u><br>Joseph Itkor, Caption Head<br>Mike Gould, Front Ensemble Tech<br>Bill "Woody" Woodward, Front Ensemble Tech<br>Joelle Varner, Cymbal Tech<br>Devon Buchanan, Battery Tech</p><br>
+
+  <p id="percawards"><u style="font-size: 18pt;">Overall Best Percussion Awards:</u><br>2018 USBands Group 6A State Championships<br>2016 USBands Group 6A State Championships<br>2015 USBands Group 6A State Championships<br>2015 USBands Group 6A National Championships<br>2014 USBands Group 6A State Championships<br>2012 USBands Group 6A National Championships<br>2012 USBands Yamaha Cup<br><br>2014  USBands Group 2A Standstill Class Champions</p>
+
+  <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br>
+Nobody is Watching!</p>
+</center>
+
 <script type="text/javascript" src="script/index.js"></script>
 </html>
