--- a/brass.html
+++ b/brass.html
@@ -4,23 +4,24 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
     <script type="text/javascript" src="script/index.js"></script>
 </head>
 
 <body>
-  <div>
+  <nav>
     <ul class="topnav">
-    <li class="topnavli"><a href="index.html">Home</a></li>
-    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-    <li class="topnavli"><a class="active" class="item" href="brass.html">Brass</a></li>
-    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-    <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
-    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
-  </ul>
-  </div>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Information</a></li>
+      <li><a href="drill.html">Drill</a></li>
+      <li><a href="brass.html" id="selected">Brass</a></li>
+      <li><a href="woodwinds.html">Woodwinds</a></li>
+      <li><a href="drumline.html">Drumline</a></li>
+      <li><a href="guard.html">Guard</a></li>
+      <li><a href="scroll.html">Scroll</a></li>
+    </ul>
+  </nav>
+  <br>
+  <script type="text/javascript" src="script/index.js"></script>
 </body>
-<script type="text/javascript" src="script/index.js"></script>
 </html>
