--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
 </head>
 
 <body>
-  <div>
+  <nav>
     <ul class="topnav">
-    <li class="topnavli"><a class="active" href="index.html">Home</a></li>
-    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-    <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
-    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-    <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
-    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
-  </ul>
-</div>
-<br>
-    <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
-    <div class="head">
-      <h1>Welcome to the official unofficial New Providnece Marching Band Website!</h1>
-    </div>
-    <center><iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></center><br>
-</div>
+      <li><a href="index.html" id="selected">Home</a></li>
+      <li><a href="calendar.html">Information</a></li>
+      <li><a href="drill.html">Drill</a></li>
+      <li><a href="brass.html">Brass</a></li>
+      <li><a href="woodwinds.html">Woodwinds</a></li>
+      <li><a href="drumline.html">Drumline</a></li>
+      <li><a href="guard.html">Guard</a></li>
+      <li><a href="scroll.html">Scroll</a></li>
+    </ul>
+  </nav>
+  <br>
+      <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
+      <div class="head">
+        <h1>Welcome to the official unofficial New Providence Marching Band Website!</h1>
+      </div>
+  </div>
+  <script type="text/javascript" src="script/index.js"></script>
 </body>
-<script type="text/javascript" src="script/index.js"></script>
 </html>
