--- a/scroll.html
+++ b/scroll.html
@@ -1,27 +1,27 @@
-<div>
+<nav>
   <ul class="topnav">
-  <li class="topnavli"><a href="index.html">Home</a></li>
-  <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-  <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-  <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
-  <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-  <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
-  <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-  <li class="topnavli"><a class="active" class="item" href="scroll.html">Scroll</a></li>
-</ul>
-</div>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="calendar.html">Information</a></li>
+    <li><a href="drill.html">Drill</a></li>
+    <li><a href="brass.html">Brass</a></li>
+    <li><a href="woodwinds.html">Woodwinds</a></li>
+    <li><a href="drumline.html">Drumline</a></li>
+    <li><a href="guard.html">Guard</a></li>
+    <li><a href="scroll.html" id="selected">Scroll</a></li>
+  </ul>
+</nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
 <link href="styles/parallax.css" rel="stylesheet" type="text/css" />
 
 <main class="wrapper">
   <section class="section parallax bg1">
-    <h1>Section 1</hi>
+    <h1>Section 1</h1>
   </section>
   <section class="section static">
     <h1>Boring</h1>
   </section>
   <section class="section parallax bg2">
-    <h1>Section 2</hi>
+    <h1>Section 2</h1>
   </section>
 </main>
 <script type="text/javascript" src="script/index.js"></script>
