--- a/guard.html
+++ b/guard.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
-    <script type="text/javascript" src="script/index.js"></script>
 </head>
 
 <body>
@@ -21,5 +20,6 @@
       <li><a href="scroll.html">Scroll</a></li>
     </ul>
   </nav>
-<script type="text/javascript" src="script/index.js"></script>
+  <script src="script/index.js"></script>
+</body>
 </html>
