--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
 </head>
 
@@ -21,11 +21,8 @@
     </ul>
   </nav>
   <br>
-      <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
-      <div class="head">
-        <h1>Welcome to the official unofficial New Providence Marching Band Website!</h1>
-      </div>
-  </div>
-  <script type="text/javascript" src="script/index.js"></script>
+  <div style='text-align:center'><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></div><br>
+  <div class="head"><h1>Welcome to the official unofficial New Providence Marching Band Website!</h1></div>
+  <script src="script/index.js"></script>
 </body>
 </html>
