--- a/brass.html
+++ b/brass.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
-    <script type="text/javascript" src="script/index.js"></script>
 </head>
 
 <body>
@@ -22,6 +21,6 @@
     </ul>
   </nav>
   <br>
-  <script type="text/javascript" src="script/index.js"></script>
+  <script src="script/index.js"></script>
 </body>
 </html>
