--- a/calendar.html
+++ b/calendar.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Calendar</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
-    <script type="text/javascript" src="script/index.js"></script>
 </head>
 
 <body>
@@ -22,8 +21,8 @@
     </ul>
   </nav>
   <br><br>
-  <center><iframe id="calendar-widget" allowtransparency="true" style="border-width:0" width="788" height="700" frameborder="0" scrolling="no" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></center><br>
-  <center><iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></center><br>
-  <script type="text/javascript" src="script/index.js"></script>
+  <div style='text-align:center'><iframe id="calendar-widget" style="border-width:0" width="788" height="700" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></div><br>
+  <div style='text-align:center'><iframe id="remind-widget" title="Remind Messages" src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></div><br>
+  <script src="script/index.js"></script>
 </body>
 </html>
