completed guard page

--- a/guard.html
+++ b/guard.html
@@ -18,7 +18,29 @@
       <li><a href="drumline.html">Drumline</a></li>
       <li><a href="guard.html" id="selected">Guard</a></li>
     </ul>
-  </nav>
+  </nav><br><br>
+  <div style='text-align:center'>
+    <img title="CG Banner" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Color_Guard.gif" alt="CG Banner" width="200" height="30" align="middle" border="0"><br>
+    <img style="border: 5px solid; width: 500px; max-width: 100%; height: auto; max-height: 168px;" title="NPMB Guard 2015" src="images/2015_opener.jpg" alt="NPMB Guard 2015 " width="500" height="168"><br>
+    <b style='font-size:12pt'>Best Color Guard:<br>
+      2018 USBands Group 6A National Championships<br>
+      2018 USBands Group 6A New Jersey State Championships<br>
+      2017 USBands Group 6A National Championships<br>
+      2016 USBands Group 6A National Championships<br>
+      2016 USBands Yamaha Cup at MetLife Stadium<br>
+      2015 USBands New Jersey Group 6A State Championships<br>
+      2015 USBands Group 6A National Championships<br>
+      2014 USBands New Jersey Group 6A State Championships<br>
+      2014 USBands Yamaha Cup at MetLife Stadium<br><br>
+    </b><br>
+    <img style="border: 5px solid; width: 500px; max-width: 100%; height: auto; max-height: 280px;" title="NP Guard at 2014 States" src="images/2014_opener.jpg" alt="NP Guard at 2014 States " width="500" height="280"><br>
+    <br><br>
+    <div style="font-size:15pt">
+      <a href="mailto:jaynpguard@gmail.com">Jay Drake</a> - Director<br>
+      Marcus Henry and Joe Harris<br>
+      Instructors
+    </div><br><br><br>
+  </div>
   <script src="script/index.js"></script>
 </body>
 </html>
