added stuff to index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,27 @@
     </ul>
   </nav>
   <br>
-  <div style='text-align:center'><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></div><br>
-  <div class="head"><h1>Welcome to the official unofficial New Providence Marching Band Website!</h1></div>
+  <div style='text-align:center'>
+    <img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg">
+    <br>
+    <div class="head"><h1>Welcome to the official unofficial New Providence Marching Band Website!</h1></div>
+    <div id="maincontent"><br>
+      Marching Band Awards are TONIGHT!<br>
+      Thursday, December 6th<br>
+      Staff and Students for Dinner at 5:45pm in the Cafeteria<br>
+      Family and Friends are encouraged to attend the awards portion of the evening<br>
+      by 7:30pm in the Auditorium<br><br>
+      Championship Jacket Order Form - <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Championship%20Jacket%20Order%20Form%202018.pdf">HERE</a><br>
+      Non-Member Championship Long-Sleeve Tee Order Form - <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Non%20Member%20Championship%20Tee%20Order%20Form%202018.pdf">HERE</a><br>
+      (these would be for anyone not in the marching band)<br><br><br>
+      <!-- 2018 band photo w/ border -->
+      USBands Association NJ State Champions:<br>
+      2002, 2003, 2004, 2006, 2008, 2009,<br>
+      2011, 2012, 2015, 2016 and 2018<br>
+      Regional Champions: 1994, 2002, 2008, 2010<br>
+      National Champions: 2011, 2012, 2015, 2016 and 2018<br>
+    </div>
+  </div>
   <script src="script/index.js"></script>
 </body>
 </html>
